PORT/style/index.css
* {
  margin: 0;
  padding: 0;
  font-family:"montserrat", sans-serif;
}

body {
  height: 100vh;
  background: url('poster.jpg');
  background-size: cover;
  background-position: center center;
  }

  #video-comp1 {
    position: fixed;
    z-index: -1;
    background-clip: content-box;
  }
  @media (min-aspect-ratio: 1 16/9) {
    #video-comp1 {
      max-width:100%;
      max-height: auto;
    }
  }
  @media (min-aspect-ratio: 1 16/9) {
    #video-comp1 {
      max-width: auto;
      max-height:100%;
    }
  }

/* Code block for menu buttons index page */
/*-------------------------------------------------------------------------------------------------------------------- */
header {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 30px 10%;
  background-color: none;
}
.logo {
  margin-right: auto;
}

.nav__links {
  list-style: none;
  display: flex;
}

.nav__links a,
.cta,
.overlay__content a {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  color: #edf0f1;
  text-decoration: none;
}

.nav__links li {
  padding: 0px 20px;
}

.nav__links li a {
  transition: all 0.3s ease 0s;
}

.nav__links li a:hover {
  color: #ff9900;
}

.cta {
  margin-left: 20px;
  padding: 9px 25px;
  background-color: rgb(223, 145, 0);
  border: none;
  border-radius: 50px;
  cursor: pointer;
  transition: all 0.3s ease 0s;
}

.cta:hover {
  background-color: #ffffff;
  color: #0f0f0f;
}

/* Mobile Nav */

.menu {
  display: none;
}

.overlay {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 3;
  left: 0;
  top: 0;
  background-color: #161616;
  overflow-x: hidden;
  transition: all 0.5s ease 0s;
}

.overlay--active {
  width: 100%;
}

.overlay__content {
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.overlay a {
  padding: 15px;
  font-size: 36px;
  display: block;
  transition: all 0.3s ease 0s;
}

.overlay a:hover,
.overlay a:focus {
  color: #0088a9;
}
.overlay .close {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
  color: #edf0f1;
  cursor: pointer;
}

@media screen and (max-height: 450px) {
  .overlay a {
    font-size: 20px;
  }
  .overlay .close {
    font-size: 40px;
    top: 15px;
    right: 35px;
  }
}

@media only screen and (max-width: 800px) {
  .nav__links,
  .cta {
    display: none;
  }
  .menu {
    display: initial;
  }
}
/* Code block for menu buttons index page */
/*--------------------------------------------------------------------------------------------------------------------*/
.button-container {
  text-align: center;
  justify-content: center;
  display: flex;
}

.btn {
  border: 1px solid #ffffff;
  background: none;
  padding: 8px 17px;
  font-size: 15px;
  cursor: pointer;
  margin: 10px;
  transition: 0.8s;
  position: relative;
  overflow: hidden;
}
.btn1 {
  color: #ffffff;
}
.btn1:hover {
  color: #000000;
}
.btn::before{
  content: "";
  position: absolute;
  left: 0px;
  width: 100%;
  height: 0%;
  background: #ffffff;
  transition: 0.8s;
}
.btn1::before {
  top: 0;
  border-radius: 0 0 50% 50%;
}
.btn1:hover::before {
  height: 180%;
}

/* CSS for clock on index page */
#MyClockDisplay {
  color: white; 
  margin-bottom: -4rem;
  text-align: center;
}

.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 80%;
}

